--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,13 @@
   "name": "srmklive/paypal",
   "type": "library",
   "description": "Laravel plugin For Processing Payments Through Paypal Express Checkout. Can Be Used Independently With Other Applications.",
-  "keywords": ["http", "rest", "web service", "paypal", "laravel paypal"],
+  "keywords": [
+    "http",
+    "rest",
+    "web service",
+    "paypal",
+    "laravel paypal"
+  ],
   "license": "MIT",
   "authors": [
     {
@@ -17,7 +23,7 @@
   },
   "require": {
     "guzzlehttp/guzzle": "~6.0|~7.0",
-    "illuminate/support": "~5.1|~5.2|~5.3|~5.4|~5.5|~5.6|~5.7|~5.8|~6.0|~7.0|~8.0|~9.0",
+    "illuminate/support": "~5.1|~5.2|~5.3|~5.4|~5.5|~5.6|~5.7|~5.8|~6.0|~7.0|~8.0|~9.0|~10.0",
     "nesbot/carbon": "~1.0|~2.0"
   },
   "config": {
